--- a/css/style.css
+++ b/css/style.css
@@ -217,7 +217,7 @@ button:focus {
   font-family: "Montserrat";
   font-size: calc(var(--card-width) * var(--text-size-offset, 0.2));
   white-space: nowrap;
-  color: #fff;
+  color: red;
   width: fit-content;
 }
 .info .name,
