--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ button:focus {
 .app {
   position: relative;
   width: 100%;
-  height: 500px;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
