--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 
 body {
   width: 100%;
-  height: 100vh;
+  height: 500px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,7 +35,7 @@ button:focus {
 .app {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 500px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,7 +43,7 @@ button:focus {
 .app__bg {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 500px;
   z-index: -5;
   filter: blur(8px);
   pointer-events: none;
@@ -56,7 +56,7 @@ button:focus {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 500px;
   background: #000;
   z-index: 1;
   opacity: 0.8;
@@ -67,13 +67,13 @@ button:focus {
   top: 50%;
   transform: translate(-50%, -50%) translateX(var(--image-translate-offset, 0));
   width: 100%;
-  height: 100%;
+  height: 500px;
   transition: transform 1000ms ease, opacity 1000ms ease;
   overflow: hidden;
 }
 .app__bg__image img {
   width: 100%;
-  height: 100%;
+  height: 500px;
   object-fit: cover;
 }
 .app__bg__image.current--image {
